2010-05-14  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/44119
	* tree-ssa-pre.c (eliminate): Properly mark replacement of
	a PHI node necessary.

	* gcc.c-torture/compile/pr44119.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@159412 138bc75d-0d04-0410-961f-82ee72b054a4